[gd_scene load_steps=4 format=3 uid="uid://dhq27k5ki1rrl"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_1qky6"]
[ext_resource type="Texture2D" uid="uid://c0lyx0hk1b33u" path="res://Assets/Player/Skorn_Ship.png" id="2_6y0c6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jb3g"]
size = Vector2(84, 90)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
input_pickable = true
script = ExtResource("1_1qky6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_6y0c6")
flip_v = true
region_rect = Rect2(14, 252, 162, 94)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_1jb3g")

[node name="BalaPosicion1" type="Marker2D" parent="."]
position = Vector2(0, -75)

[node name="BalaPosicion2" type="Marker2D" parent="."]
position = Vector2(-28, -75)

[node name="BalaPosicion3" type="Marker2D" parent="."]
position = Vector2(27, -75)

[node name="BalaTimer" type="Timer" parent="."]
autostart = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="BalaTimer" to="." method="_on_bala_timer_timeout"]
